--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
-    "i18next": "^22.0.2",
+    "i18next": "^22.5.1",
+    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next-http-backend": "^2.2.1",
+    "jss-rtl": "^0.3.0",
     "material-ui-phone-number-2": "^1.3.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^9.0.10",
     "react-imask": "^6.4.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
