--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-i18next": "^9.0.10",
     "react-imask": "^6.4.3",
     "react-scripts": "5.0.1",
+    "source-map-loader": "^4.0.1",
     "styled-components": "^5.3.6",
+    "stylis-plugin-rtl": "^2.1.1",
     "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
