--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "framer-motion": "^10.12.18",
+    "gsap": "^3.12.2",
     "i18next": "^22.5.1",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-http-backend": "^2.2.1",
