--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-i18next": "^9.0.10",
     "react-imask": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-tilt": "^1.0.2",
     "source-map-loader": "^4.0.1",
     "styled-components": "^5.3.6",
     "stylis-plugin-rtl": "^2.1.1",
